# erechnung

./: .dockerignore  .env.ci  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SBOM.json  SECURITY.md  TODO_2026.md  docker-compose.backup-test.yml  docker-compose.dev-volumes.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.frontend.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.secrets.yml  docker-compose.update-test.yml  docker-compose.yml  next_steps.md  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: ACL_FIELD_MAPPING.md  ANTI_PATTERN_ANALYSIS.md  API_SPECIFICATION.md  ARCHITECTURE.md  AUDIT_UMSETZUNGSPLAN.md  CODEBASE_AUDIT_2026-02-26.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_TOOLS.md  DEPENDENCY_VERSION_AUDIT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_CONTEXT.md  DJANGO_6_HTTPS_MIGRATION_ANALYSIS.md  E2E_TESTING.md  ERROR_CATALOG.md  FRONTEND_BACKLOG.md  FRONTEND_PROTOCOL.md  GOBD_IMPLEMENTATION.md  GOBD_PROTOCOL.md  IMPORT_EXPORT_IMPLEMENTATION_PLAN.md  INCOMING_INVOICE_SYSTEM_SUMMARY.md  INSTALLATION.md  INVOICE_TESTING_GUIDE.md  METALLB_MIGRATION.md  MIGRATION_STRATEGY.md  MISSING_VIEWS_IMPLEMENTATION_PLAN.md  OPERATIONS.md  PROGRESS_PROTOCOL.md  PROGRESS_PROTOCOL_POSTGRES_TLS.md  PROGRESS_PROTOCOL_TEMPLATE.md  PROGRESS_PROTOCOL_unsortiert.md  PROTOKOLL_BUILD_v0.0.1.md  README.md  REGISTRY.md  SBOM.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  UPDATE_IMPLEMENTATION_PLAN.md  UPDATE_STRATEGY.md  URLS.html  (+5 more)
frontend/: .gitignore  Dockerfile.dev  Dockerfile.e2e  Dockerfile.prod  E2E_TESTING.md  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
scripts/: backup.sh  backup_restore_test.sh  build_local.sh  check_dependencies.py  check_rest_views_coverage.sh  check_xml.py  comprehensive_invoice_validator.py  debug_e2e.sh  django_safe_update.py  extract_pdf_xml.py  gateway.sh  generate-pg-certs.sh  generate-secrets.sh  generate_real_invoice.py  generate_sample_pdf.py  init_django.sh  inspect_pdf_xml.py  k3s-status.sh  k3s-uninstall.sh  k3s-update-images.sh  local_test_commands.sh  migrate-to-metallb.sh  process_incoming_invoice.py  regenerate_openapi.sh  restore.sh  rollback-docker.sh  rotate-k8s-secrets.sh  run-update-tests.sh  run_e2e_container.sh  run_e2e_k3s.sh  run_local_ci_checks.sh  run_tests_docker.sh  safe_dependency_updater.py  scan_directory.py  (+20 more)
(+630 files in other folders)
