[project]
name = "erechnung"
version = "0.1.2"
description = "ZUGFeRD/Factur-X Rechnungssystem"

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py313"

# Exclude patterns
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

# Configure linting rules
[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PL",   # pylint
]

ignore = [
    "E501",     # Line too long (ruff format handles this)
    "E203",     # Whitespace before ':' (ruff format handles this)
    "PLC0415",  # import not at top level — Django pattern (apps.py, signals, admin)
    "PLR2004",  # Magic value in comparison — too noisy for application code
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-returns = 8
max-branches = 16
max-statements = 60
max-args = 7

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR0915"]              # Tests can have many statements
"**/utils/xml/generator.py" = ["PLR0912", "PLR0915"]  # XML generation is inherently complex
"**/management/commands/generate_test_data.py" = ["PLR0915"]  # Test data generation is inherently verbose

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.format]
max-line-length = 119

[tool.bandit]
targets = ["project_root/invoice_app"]
exclude_dirs = ["project_root/invoice_app/tests", "project_root/invoice_app/migrations"]
skips = ["B101"]  # assert used in production code for invariants (acceptable)

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "invoice_project.settings"
python_files = "test_*.py"
testpaths = [
    "project_root/invoice_app/tests",
]
addopts = "-ra"
markers = [
    "integration: mark a test as integration-level",
]
pythonpath = ["project_root"]

[tool.coverage.run]
branch = true
source = ["project_root/invoice_app"]
omit = [
    "*/migrations/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
]
